# ZetaRay

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  ZetaRay.sln
Samples/Sponza/: CMakeLists.txt  Sponza.cpp  Sponza.vcxproj  Sponza.vcxproj.filters
Source/ZetaLab/: CMakeLists.txt  ZetaLab.cpp
Source/ZetaRenderPass/: CMakeLists.txt  RenderPass.cpp  RenderPass.h
Source/ZetaRenderer/: CMakeLists.txt
Tests/: CMakeLists.txt  TestAliasTable.cpp  TestContainer.cpp  TestMath.cpp  TestOffsetAllocator.cpp  TestOptional.cpp  Tests.vcxproj  Tests.vcxproj.filters  main.cpp
Tools/BCnCompressglTF/: BCnCompressglTF.cpp  CMakeLists.txt
Tools/PrecompileShaders/: CMakeLists.txt  PrecompileShaders.cpp
ZetaCore/: CMakeLists.txt
ZetaCore/App/: App.h  Common.h  Filesystem.h  Log.h  Timer.h  ZetaRay.h
ZetaCore/Core/: CMakeLists.txt  CommandList.cpp  CommandList.h  CommandQueue.cpp  CommandQueue.h  Config.h  Constants.h  DescriptorHeap.cpp  DescriptorHeap.h  Device.cpp  Device.h  Direct3DHelpers.cpp  Direct3DHelpers.h  Direct3DUtil.h  GpuMemory.cpp  GpuMemory.h  GpuTimer.cpp  GpuTimer.h  HLSLCompat.h  Material.h  PipelineStateLibrary.cpp  PipelineStateLibrary.h  RenderGraph.cpp  RenderGraph.h  RendererCore.cpp  RendererCore.h  RootSignature.cpp  RootSignature.h  SharedShaderResources.cpp  SharedShaderResources.h  Vertex.h
ZetaCore/Math/: BVH.cpp  BVH.h  CMakeLists.txt  CollisionFuncs.h  CollisionTypes.h  Color.h  Common.cpp  Common.h  Matrix.h  MatrixFuncs.h  Quaternion.h  Sampling.cpp  Sampling.h  Surface.cpp  Surface.h  Vector.h  VectorFuncs.h
ZetaCore/Model/: CMakeLists.txt  Mesh.cpp  Mesh.h  glTF.cpp  glTF.h  glTFAsset.h
ZetaCore/RayTracing/: RtAccelerationStructure.cpp  RtAccelerationStructure.h  RtCommon.h  Sampler.cpp  Sampler.h
ZetaCore/Scene/: Asset.cpp  Asset.h  Camera.cpp  Camera.h  SceneCore.cpp  SceneCore.h  SceneRenderer.h
ZetaCore/Support/: CMakeLists.txt  FrameMemory.h  Memory.h  MemoryArena.cpp  MemoryArena.h  MemoryPool.cpp  OffsetAllocator.h  Param.cpp  Param.h  Stat.h  Task.cpp  Task.h  ThreadPool.cpp  ThreadPool.h  ThreadSafeMemoryArena.cpp  ThreadSafeMemoryArena.h
ZetaCore/Utility/: CMakeLists.txt  Error.cpp  Error.h  Function.h  HashTable.h  Optional.h  RNG.h  SmallVector.h  Span.h  SynchronizedView.h  Utility.h
ZetaCore/Win32/: CMakeLists.txt  Win32App.cpp  Win32Common.cpp  Win32Filesystem.cpp  Win32Timer.cpp
ZetaRay/: CMakeLists.txt  ZetaRay.vcxproj  ZetaRay.vcxproj.filters
ZetaRay/App/: App.h  CMakeLists.txt  Filesystem.h  Timer.h  ZetaRay.h
ZetaRay/Core/: CMakeLists.txt  CommandList.cpp  CommandList.h  CommandQueue.cpp  CommandQueue.h  Constants.h  DescriptorHeap.cpp  DescriptorHeap.h  Device.cpp  Device.h  Direct3DHelpers.cpp  Direct3DHelpers.h  GpuMemory.cpp  GpuMemory.h  GpuTimer.cpp  GpuTimer.h  PipelineStateLibrary.cpp  PipelineStateLibrary.h  RenderGraph.cpp  RenderGraph.h  Renderer.cpp  Renderer.h  RootSignature.cpp  RootSignature.h  SharedShaderResources.cpp  SharedShaderResources.h  Vertex.h  ZetaRay.h  dds.h
ZetaRay/Math/: BVH.cpp  BVH.h  CMakeLists.txt  CollisionFuncs.h  CollisionTypes.h  Common.cpp  Common.h  Matrix.h  MatrixFuncs.h  Quaternion.h  Sampling.cpp  Sampling.h  Surface.cpp  Surface.h  Vector.h  VectorFuncs.h
ZetaRay/Model/: CMakeLists.txt  Mesh.cpp  Mesh.h  glTF.cpp  glTF.h  glTF2.cpp  glTF2.h  glTFAsset.h
ZetaRay/RayTracing/: CMakeLists.txt  RtAccelerationStructure.cpp  RtAccelerationStructure.h  Sampler.cpp  Sampler.h
ZetaRay/RenderPass/: CMakeLists.txt  RenderPass.cpp  RenderPass.h
ZetaRay/Scene/: Asset.cpp  Asset.h  AssetManager.cpp  AssetManager.h  Assets.h  BVH.cpp  BVH.h  CMakeLists.txt  Camera.cpp  Camera.h  Scene.cpp  Scene.h  SceneCore.cpp  SceneCore.h
ZetaRay/Support/: CMakeLists.txt  FrameMemory.h  Memory.cpp  Memory.h  MemoryArena.cpp  MemoryArena.h  MemoryPool.cpp  MemoryPool.h  Param.cpp  Param.h  Stat.h  StlMemoryAllocator.h  Task.cpp  Task.h  ThreadPool.cpp  ThreadPool.h
ZetaRay/SupportSystem/: Memory.cpp  Memory.h  MemoryPool.cpp  MemoryPool.h  Param.cpp  Param.h  Stat.h  Task.cpp  Task.h  ThreadPool.cpp  ThreadPool.h
ZetaRay/Utility/: CMakeLists.txt  Error.cpp  Error.h  Function.h  HashTable.h  RNG.h  SmallVector.h  Span.h  SynchronizedView.h
ZetaRay/Win32/: App.cpp  App.h  CMakeLists.txt  Filesystem.cpp  Filesystem.h  Log.h  Timer.h  Win32.h  Win32App.cpp  Win32Common.cpp  Win32Common.h  Win32Filesystem.cpp  Win32Timer.cpp
ZetaRay/ZetaRenderPass/: RenderPass.cpp  RenderPass.h
ZetaRenderPass/: CMakeLists.txt  RenderPass.cpp  RenderPass.h
ZetaRenderPass/AutoExposure/: AutoExposure.cpp  AutoExposure.h  AutoExposure.hlsl  AutoExposure_Common.h  AutoExposure_Downsample.hlsl  AutoExposure_ExpectedVal.hlsl  AutoExposure_Histogram.hlsl  CMakeLists.txt
ZetaRenderPass/Clear/: CMakeLists.txt  Clear.cpp  Clear.h
ZetaRenderPass/Common/: BRDF.hlsli  CMakeLists.txt  Common.hlsli  FrameConstants.h  GBuffers.hlsli  LightSourceData.h  Math.hlsli  RT.hlsli  Sampling.hlsli  StaticTextureSamplers.hlsli  VolumetricLighting.hlsli  ffx_a.h
ZetaRenderPass/Compositing/: CMakeLists.txt  Compositing.cpp  Compositing.h  Compositing.hlsl  Compositing_Common.h  DoF_Gather.hlsl  DoF_GaussianFilter.hlsl  FireflyFilter.hlsl
ZetaRenderPass/Denoiser/: CMakeLists.txt  DiffuseDNSR.cpp  DiffuseDNSR.h  DiffuseDNSR_Common.h  DiffuseDNSR_SpatialFilter.hlsl  DiffuseDNSR_TemporalPass.hlsl  STAD.cpp  STAD.h  STAD_Common.h  STAD_SpatialFilter.hlsl  STAD_TemporalFilter.hlsl
ZetaRenderPass/DiffuseIndirect/: CMakeLists.txt  DiffuseDNSR_SpatialFilter.hlsl  DiffuseDNSR_Temporal.hlsl  ReSTIR_GI_Diffuse.cpp  ReSTIR_GI_Diffuse.h  ReSTIR_GI_Diffuse_Common.h  ReSTIR_GI_Diffuse_Spatial.hlsl  ReSTIR_GI_Diffuse_Temporal.hlsl  ReSTIR_GI_Diffuse_Validation.hlsl  Reservoir_Diffuse.hlsli
ZetaRenderPass/DirectIllumination/: CMakeLists.txt  DirectDNSR_SpatialFilter.hlsl  DirectDNSR_Temporal.hlsl  ReSTIR_DI.cpp  ReSTIR_DI.h  ReSTIR_DI_Common.h  ReSTIR_DI_Spatial.hlsl  ReSTIR_DI_Temporal.hlsl  Reservoir_DI.hlsli
ZetaRenderPass/DirectLighting/: CMakeLists.txt  DirectLighting.cpp  (+11 more)
ZetaRenderer/: CMakeLists.txt
(+730 files in other folders)
